kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-cloud
  namespace: mattermost-cloud
  labels:
    app.kubernetes.io/name: mattermost-cloud
    app.kubernetes.io/component: provisioner
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mattermost-cloud
      app.kubernetes.io/component: provisioner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mattermost-cloud
        app.kubernetes.io/component: provisioner
    spec:
      containers:
      - name: mattermost-cloud
        image: mattermost/mattermost-cloud:latest
        imagePullPolicy: Always
        terminationMessagePolicy: "FallbackToLogsOnError"
        args: ["server", "--debug", "true", "--state-store", "mattermost-kops-state-test", "--route53-id", "$(ROUTE53_ID)","--certificate-aws-arn", "$(CERTIFICATE_AWS_ARN)", "--private-route53-id", "$(PRIVATE_ROUTE53_ID)", "--private-dns", "$(PRIVATE_DNS)", "--private-subnets", "$(PRIVATE_SUBNETS)", "--public-subnets", "$(PUBLIC_SUBNETS)", "--database", "$(DATABASE)"]
        ports:
        - containerPort: 8075
          name: api
        resources:
          {}
        volumeMounts:
        - name: cluster-persistent-storage
          mountPath: /mattermost-cloud/clusters/
        - name: mattermost-cloud-ssh-volume
          mountPath: /.ssh
        - name: mattermost-cloud-tmp-volume
          mountPath: /tmp
        - name: mattermost-cloud-helm-volume
          mountPath: /.helm
      volumes:
      - name: cluster-persistent-storage
        persistentVolumeClaim:
          claimName: cluster-pv-claim
      - name: mattermost-cloud-ssh-volume
        secret:
          secretName: mattermost-cloud-ssh-secret
      - name: mattermost-cloud-tmp-volume
        emptyDir: {}
      - name: mattermost-cloud-helm-volume
        emptyDir: {}
