kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mattermost-cloud
  namespace: mattermost-cloud
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: mattermost-cloud-service
          servicePort: 8075
        path: /
